Fixed whitespace above image in parallax bg.
Forced the two sections of the about/services slide to
33% and 66% of the parent div's height to cover up
whitespace above the following image background.
Might want to try and find a better fix so the div doesn't
have to take up the whole screen.

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -148,10 +148,12 @@ nav.navbar .dropdown-form li + li:before {
 
 .landing .about {
 	padding: 50px 0;
+	height: 33%;
 }
 
 .landing .services {
 	padding: 50px 0;
+	height: 66%;
 }
 
 .landing .service-item {
